# GBaric

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  GBaric.code-workspace  Makefile  README.md  README.md.in  cmake_install.cmake
config/: Version.h.in
flatpak/: iotoys.gbaric.player.yml
include/: ApplicationBase.h  CMakeLists.txt  DBEngine.h  DBEngineBase.h  DataObject.h  GMediaPlayer.h  IVideoPlayer.h  Logger.h  MainWindow.h  Makefile  RenderSurface.h  Storage.h  Version.h  VlcPlayer.h  cmake_install.cmake
include/Gui/: GuiThread.h  TaskQueueBase.h
include/Memory/: DBEngineBase.h  DataObject.h  FileManagerBase.h  Memory.h  MemoryStream.h  Storage.h
include/Players/Gst/: GstPipelineBase.h  GstPipelineObj.h  GstVideoPlayer.h
include/Players/VlcPlayer/: Defines.h  VlcMemoryPlayer.h  VlcPlayerBase.h
resources/: GBaric.cmb  GBaric.cmb.db  gbaric.ui  gui.glade  gui.glade~  resources.gresource  resources.xml  style.css
resources/Workbench/GBaric/: icons.gresource  icons.gresource.xml  main.blp  settings
src/: ApplicationBase.cpp  CMakeLists.txt  DBEngine.cpp  DBEngineBase.cpp  DataObject.cpp  GBaric.cpp  GMediaPlayer.cpp  Logger.cpp  MainWindow.cpp  Makefile  Memory.cpp  RenderSurface.cpp  Storage.cpp  VlcPlayer.cpp  cmake_install.cmake
src/Gui/: GuiThread.cpp  TaskQueueBase.cpp
src/Memory/: DataObject.cpp  FileManagerBase.cpp  MemoryStream.cpp  Storage.cpp
src/Players/Gst/: GstPipelineBase.cpp  GstPipelineObj.cpp  GstVideoPlayer.cpp
src/Players/VlcPlayer/: VlcMemoryPlayer.cpp  VlcPlayerBase.cpp
video_resources/: vlc_gtk_screen_recording.webm
